@@ -31,6 +31,7 @@
 - https://github.com/eclipse-sirius/sirius-components/issues/1442[#1442] [diagram] Selecting an element in a diagram can hide others
 - https://github.com/eclipse-sirius/sirius-components/issues/1462[#1462] [diagram] Restore the missing hover / selected feedback on parametric SVG style
 - [diagram] When clicking on a node in a diagram, the creation tools list is now always in the same order
+- https://github.com/eclipse-sirius/sirius-components/issues/1485[#1485] [diagram] Select the relevant edge reconnection tools
 
 
 === New Features
